--- a/corridaSapos_15032018/Makefile
+++ b/corridaSapos_15032018/Makefile
@@ -1,11 +1,11 @@
-PROG = exec
+PROG = executavel
 CC = g++
 CPPFLAGS = -O0 -g -W -Wall -pedantic
 OBJS = main.o sapo.o
 
 $(PROG) : $(OBJS)
 	$(CC) $(OBJS) -o $(PROG)
-	mv *.o build/ && mv exec bin/
+	mv *.o build/ && mv $(PROG) bin/
 
 main.o:
 	$(CC) $(CPPFLAGS) -c src/main.cpp
@@ -15,4 +15,4 @@ sapo.o: include/sapo.h
 
 clean: 
 	rm -f build/*.o
-	rm -f bin/*
+	rm -f bin/$(PROG)
