Ajustando funções da classe pista

--- a/lp1/corridaSapos/Makefile
+++ b/lp1/corridaSapos/Makefile
@@ -1,7 +1,7 @@
 PROG = executavel
 CC = g++
 CPPFLAGS = -O0 -g -W -Wall -pedantic
-OBJS = main.o sapo.o
+OBJS = main.o sapo.o pista.o
 
 $(PROG) : $(OBJS)
 	$(CC) $(OBJS) -o $(PROG)
@@ -10,8 +10,11 @@ $(PROG) : $(OBJS)
 main.o:
 	$(CC) $(CPPFLAGS) -c src/main.cpp
 
-sapo.o: include/sapo.h
+sapo.o: include/sapo.hpp
 	$(CC) $(CPPFLAGS) -c src/sapo.cpp
+
+pista.o: include/pista.hpp
+	$(CC) $(CPPFLAGS) -c src/pista.cpp
 
 clean: 
 	rm -f build/*.o
