Readme do trabalho

--- a/ioac/simuladorMemoria/makefile
+++ b/ioac/simuladorMemoria/makefile
@@ -1,4 +1,4 @@
-PROG = programa
+PROG = executavel
 CC = g++
 CPPFLAGS = -O0 -g -W -Wall -pedantic -std=c++11
 OBJS = main.o principal.o cache.o arquivo.o controle.o
